--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -41,7 +41,7 @@
                 (onChange)="onChange()"
                 [type]="'string'"
                 [format]="'YYYY-MM-DD'"
-                [options]="{ monthFormat: 'MMMM y' }">
+                [options]="{ monthFormat: 'MMMM YYYY' }">
   </ion-calendar>
 
   <button ion-button full outline class="btn-question" (click)="findWithoutNumber()">{{'E_TICKET_PAGE.HAVE_NO_NUMBER' | translate}}</button>
