fix "clear all" in german lang

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -11,7 +11,7 @@
           <ion-title><b>{{ 'SEARCH_FILTERS_PAGE.SEARCH_FILTERS' | translate}}</b></ion-title>
         </ion-col>
         <ion-col text-right col-2 *ngIf="extended">
-          <button no-padding text-capitalize clear color="clear" ion-button (click)="clearSearchParams()">{{ 'SEARCH_FILTERS_PAGE.CLEAR_ALL' | translate}}</button>
+          <button no-padding text-capitalize text-wrap clear color="clear" ion-button (click)="clearSearchParams()">{{ 'SEARCH_FILTERS_PAGE.CLEAR_ALL' | translate}}</button>
         </ion-col>
       </ion-row>
     </ion-grid>
