--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -31,7 +31,7 @@
         {{'E_TICKET_PAGE.DATE' | translate}}
       </ion-label>
       <div item-content class="item-content">
-        {{ params.date | date:'d MMM, y' }}
+        {{ getLocaleDate() }}
       </div>
     </button>
   </ion-list>
