fix no transactions page

--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -93,7 +93,7 @@
       <ion-col col-8 offset-2>
         <ion-item no-lines no-padding>
           <p>{{ 'TRANSACTIONS_PAGE.NO_RESULTS' | translate }}</p>
-          <p>{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS' | translate }}</p>
+          <p text-wrap>{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS' | translate }}</p>
           <p><button no-margin ion-button clear (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button></p>
         </ion-item>
       </ion-col>
