fix search button

--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -32,7 +32,7 @@
       </ion-row>
     </ion-grid>
 
-    <ion-footer>
+    <ion-footer class="position-block-onKeyboard-show">
       <button class="search-btn" (click)="search()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.SEARCH' | translate}}</button>
     </ion-footer>
 
