fixed labels - billing Types & Transactions Types

--- a/src/pages/transactions/params/params.html
+++ b/src/pages/transactions/params/params.html
@@ -29,7 +29,7 @@
       <ion-radio mode="ios" value="N" (ionSelect)="showInputAffiliateName(false)"></ion-radio>
     </ion-item>
     <ion-item mode="ios" no-lines>
-      <ion-label color="dark">{{ 'ENTER' | translate }} {{ 'SEARCH_FILTERS_PAGE.AFFILIATE' | translate }}</ion-label>
+      <ion-label color="dark">{{ 'SEARCH_FILTERS_PAGE.ENTER_AFFILIATE' | translate }}</ion-label>
       <ion-radio mode="ios" value="name" (ionSelect)="showInputAffiliateName(true)"></ion-radio>
     </ion-item>
     <ion-row class="white-bg" *ngIf="showedInputAffiliateName">
