--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -39,7 +39,7 @@
         <ion-item no-margin no-padding>
           <ion-input formControlName="purchase_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate}}"></ion-input>
         </ion-item>
-        <ion-label *ngIf="showedError" class="err-message" no-margin>
+        <ion-label text-wrap *ngIf="showedError" class="err-message" no-margin>
           {{ showedError }}
         </ion-label>
       </ion-list>
