added param "owner_id", added username to locationPage & templatePage, added email validation to SearchPage & TicketPage, fix translate & password

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,7 +10,7 @@
 
   <ion-list mode="ios" no-margin>
 
-    <ion-item (click)="changeLang()">
+    <ion-item tappable (click)="changeLang()">
       <ion-icon class="icon-language" item-start></ion-icon>
       <ion-label>
         {{ 'SETTINGS_PAGE.LANGUAGE' | translate }}
