--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <div *ngIf="withoutNumber; else withNumber">
-    <ion-grid>
+    <ion-grid class="form-group">
       <ion-row>
         <ion-col col-6>
           <ion-item no-margin no-padding>
@@ -25,15 +25,18 @@
       </ion-row>
       <ion-row>
         <ion-col col-12>
-          <ion-item no-margin no-padding>
-            <ion-input type="email" placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email"></ion-input>
+          <ion-item no-margin no-padding [class.has-value]="email.value">
+            <ion-input #email="ngModel" type="email" email placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email" (ionBlur)="checkValid(email)"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
+      <ion-label text-wrap *ngIf="showedError" class="err-message" no-margin>
+        {{ showedError }}
+      </ion-label>
     </ion-grid>
 
     <ion-footer class="position-block-onKeyboard-show">
-      <button class="search-btn" (click)="search()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.SEARCH' | translate}}</button>
+      <button [disabled]="email.invalid && email.value && email.touched" class="search-btn form-group" (click)="search()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.SEARCH' | translate}}</button>
     </ion-footer>
 
   </div>
