--- a/src/pages/ticket/ticket-details/ticket-details.html
+++ b/src/pages/ticket/ticket-details/ticket-details.html
@@ -94,6 +94,6 @@
 
 <ion-footer *ngIf="result.mode == 'modal' && result.status == 'success'">
   <button large ion-button full [style.background-color]="'#35ce76'" no-margin (click)="markTicket()">
-    <b>{{'E_TICKET_PAGE.MARK_AS' | translate}} {{ 'E_TICKET_PAGE.USED' | translate }}</b>
+    <b>{{'E_TICKET_PAGE.MARK_AS_USED' | translate}}</b>
   </button>
 </ion-footer>
