--- a/src/pages/earning/earning.html
+++ b/src/pages/earning/earning.html
@@ -26,6 +26,7 @@
 <ion-content>
 
   <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content pullingIcon="arrow-dropdown"></ion-refresher-content>
   </ion-refresher>
 
   <div *ngIf="somethingWentWrong; else allRight">
