--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -9,6 +9,7 @@
 <ion-content>
 
   <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content pullingIcon="arrow-dropdown"></ion-refresher-content>
   </ion-refresher>
 
   <ion-list no-padding no-margin>
